--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 requests==2.20.1
-numpy==1.15.2
+numpy==1.15.0
 scipy==1.1.0
 scikit-learn==0.20.0
 certifi==2018.10.15
@@ -16,8 +16,9 @@ pyparsing==2.3.0
 python-dateutil==2.7.5
 pytz==2018.7
 six==1.11.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch==0.4.1
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torchvision==0.2.1
 tqdm==4.28.1
-ujson==1.35
 urllib3==1.24.1
